# WorkSplit

./: .gitignore  Cargo.toml  PLAN2.md  PLAN3.md  PLAN4.md  README.md  worksplit.toml
.github/workflows/: release.yml
examples/edit_demo/: worksplit.toml
examples/sample_project/: worksplit.toml
examples/sequential_demo/: Cargo.toml  worksplit.toml
examples/split_demo/: worksplit.toml
jobs/: _jobstatus.json  _managerinstruction.md  _systemprompt_edit.md  _systemprompt_test.md  _systemprompt_verify.md  _systemprompt_verify_edit.md  archive_001_config.md  archive_002_archive_cmd.md  archive_003_cleanup_cmd.md  archive_004_wire.md  archive_005_auto_run.md  batch_001_concurrent_status.md  batch_002_job_dependency.md  batch_003_parallel_runner.md  batch_004_cli_options.md  batch_005_module_update.md  edit_001_job_metadata.md  edit_002_parser_edit_format.md  edit_002b_mod_update.md  edit_003_runner_apply_edits.md  edit_004_systemprompt.md  edit_005_documentation.md  edit_006_error_type.md  enhance_001_models.md  enhance_002_parser_fuzzy.md  enhance_003_status_tracking.md  enhance_004_runner_edit.md  enhance_005_cli_deps.md  enhance_006_error_suggestions.md  enhance_007_parser_patterns.md  enhance_008_runner_new_modes.md  fix_001_path_heading_extraction.md  fix_002_path_heading_tests.md  improve_001_unique_fence.md  improve_002_retry_feedback.md  improve_003_stop_on_fail.md  improve_004_modified_context.md  improve_005_verification_tiers.md  plan3_001_build_foundation.md  plan3_002_build_logic.md  (+24 more)
src/: error.rs  lib.rs  main.rs
tests/: runner_test.rs
(+128 files in other folders)
